--- a/Cboe/public_html/admin/admin.html
+++ b/Cboe/public_html/admin/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
-    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="./assets/css/admin.css">
 </head>
 <body>
     <div class="admin-login-container">
@@ -16,6 +16,6 @@
             <p id="adminLoginError" class="error-msg"></p>
         </form>
     </div>
-    <script src="admin.js"></script>
+    <script src="./assets/js/admin.js"></script>
 </body>
 </html>
