--- a/Cboe/public_html/register/register.html
+++ b/Cboe/public_html/register/register.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="../assets/css/register.css">
+    <!-- font awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 
 <body>
@@ -20,7 +22,8 @@
 
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" placeholder="Enter your username" autocomplete="off" required>
+                <input type="text" id="username" name="username" placeholder="Enter your username" autocomplete="off"
+                    required>
                 <small id="usernameFeedback" class="feedback"></small>
                 <ul id="usernameSuggestions" class="suggestions-list"></ul>
                 <div class="error-message" id="usernameError"></div>
@@ -98,6 +101,7 @@
             <div class="form-group">
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" placeholder="Enter your password">
+                <!-- <i class="toggle-eye fa-regular fa-eye" data-target="password"></i> -->
                 <div class="error-message" id="passwordError"></div>
                 <div class="password-strength-indicator">
                     <div class="stength-bar" id="strengthBar"></div>
@@ -108,6 +112,7 @@
             <div class="form-group">
                 <label for="confirmPassword">Confirm Password:</label>
                 <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password">
+                <!-- <i class="toggle-eye fa-regular fa-eye" data-target="confirmPassword"></i> -->
                 <div class="error-message" id="confirmPasswordError"></div>
             </div>
 
@@ -126,7 +131,7 @@
 
             <button type="submit">Register</button>
 
-            <p id="have-account">Already have an account?<a href="../Login/login.html"> Login</a></p>
+            <p id="have-account">Already have an account?<a href="../login/login.html"> Login</a></p>
         </form>
 
         <!-- modal -->
@@ -137,7 +142,7 @@
             </div>
         </div>
     </div>
-    <script src="register.js"></script>
+    <script src="../assets/js/register.js"></script>
 </body>
 
 </html>
