--- a/Cboe/public_html/admin/manage-users.html
+++ b/Cboe/public_html/admin/manage-users.html
@@ -15,15 +15,17 @@
 <body class="light-mode">
     <div id="dashboard-container">
         <!-- sidebar -->
-        <aside id="sidebar">
+        <aside id="sidebar" class="sidebar hidden">
             <div class="sidebar-header">
-                <h2>Cboe</h2>
+                <h2>Cboe Admin</h2>
             </div>
-            <nav>
+            <nav id="sidebar-menu">
+                <!-- <h3>Menu</h3> -->
                 <ul>
-                    <li><a href="#" class="active"><i class="fas fa-home"></i><span>Dashboard</span></a></li>
-                    <li><a href="manage-users.html"><i class="fa-solid fa-tools"></i><span>Manage User</span></a></li>
-                    <li><a href="transaction.html"><i class="fa-solid fa-trend-up"></i><span>Transactions</span></a></li>
+                    <li><a href="dashboard.html"><i class="fas fa-home"></i><span>Dashboard</span></a></li>
+                    <li><a href="#" class="active"><i class="fa-solid fa-chart-line"></i><span>Manage Users</span></a>
+                    </li>
+                    <li><a href="transaction.html"><i class="fa-solid fa-wallet"></i><span>Transactions</span></a></li>
                 </ul>
             </nav>
             <!-- theme toggle and register button -->
@@ -32,7 +34,7 @@
                     <i class="fas fa-moon"></i><span>Toggle Theme</span>
                 </button>
                 <button id="profile-btn" class="sidebar-btn profile-sidebar-btn">
-                    <i class="fa-solid fa-user"></i><span>Profile</span>
+                    <i class="fas fa-user"></i><span>Profile</span>
                 </button>
             </div>
         </aside>
@@ -70,52 +72,29 @@
 
             <!-- dashboard content -->
             <main id="content">
-                <h3 id="page-title">Admin Dashboard</h3>
+                <h3 id="page-title">Manage Users</h3>
 
-                <section class="dashboard-overview">
-                    <div class="card">
-                        <div class="card-icon"><i class="fas fa-tasks"></i></div>
-                        <div class="card-info">
-                            <span class="card-title">Active Users</span>
-                            <p><span class="card-value">0</span></p>
-                        </div>
-                    </div>
+                <section>
+                    <h2>Users</h2>
+                    <table id="users-table">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Name</th>
+                                <th>Email</th>
+                                <th>Balance ($)</th>
+                                <th>Update Balance</th>
+                                <th>Send Message/ Billing</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Users will be populated here -->
+                        </tbody>
+                    </table>
 
-                    <div class="card">
-                        <div class="card-icon"><i class="fas fa-sticky-note"></i></div>
-                        <div class="card-info">
-                            <span class="card-title">Verified Users</span>
-                            <p><span class="card-value positive">0</span></p>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="card-icon"><i class="fas fa-users"></i></div>
-                        <div class="card-info">
-                            <span class="card-title">Total Users</span>
-                            <span class="card-value">3</span>
-                        </div>
-                    </div>
-
-
-                    <div class="card">
-                        <div class="card-icon"><i class="fas fa-tools"></i></div>
-                        <div class="card-info">
-                            <span class="card-title">Active/Total Trades</span>
-                            <span class="card-value">7</span>
-                        </div>
-                    </div>
-
-                    <div class="card flexible1">
-                        <div class="card-icon"><i class="fas fa-users"></i></div>
-                        <div class="card-info">
-                            <span class="card-title">Transaction History</span>
-                            <li><span class="card-value">No Active transactions yet</span></li>
-                        </div>
-                    </div>
-
-                    <div id="message-container"></div>
+                    <!-- <div id="message-container"></div> -->
                 </section>
+
             </main>
         </div>
     </div>
