Update dashboard.html profile avatar

--- a/Cboe/public_html/admin/dashboard.html
+++ b/Cboe/public_html/admin/dashboard.html
@@ -58,7 +58,7 @@
                         <div class="profile-info">
                             <!-- <span class="user-name">EmmaLex Vwede</span> -->
                             <span class="user-name">Welcome, User</span>
-                            <img src="" alt="" class="profile-avatar">
+                            <img src="https://via.placeholder.com/40" alt="avatar" class="profile-avatar">
                         </div>
                         <div class="dropdown-menu hidden">
                             <a href="#">Settings</a>
