Update index.html updated popups

--- a/Cboe/public_html/index.html
+++ b/Cboe/public_html/index.html
@@ -647,6 +647,8 @@
         </div>
     </footer>
 
+<!-- popup -->
+<div id="popup-container"></div>
 
     <button id="backToTop"><i class="fa-solid fa-arrow-up"></i> Back to Top</button>
     <!-- js -->
