--- a/Cboe/public_html/index.html
+++ b/Cboe/public_html/index.html
@@ -44,11 +44,11 @@
     <nav>
         <div class="logo">Cboe</div>
         <ul class="nav-links" id="navLinks">
-            <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="#cboe"><i class="fas fa-info-circle"></i> About</a></li>
-            <li><a href="#service"><i class="fas fa-cogs"></i> Services</a></li>
-            <li><a href="#contact"><i class="fas fa-phone"></i> Contact</a></li>
-            <li><a href="./login/login.html"><i class="fas fa-user-lock"></i> Login</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#cboe">About</a></li>
+            <li><a href="#service">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="./login/login.html">Login</a></li>
         </ul>
 
         <div class="hamburger" aria-expanded="false" aria-label="Toggle navigation">
