--- a/Cboe/public_html/index.html
+++ b/Cboe/public_html/index.html
@@ -101,6 +101,18 @@
         </div>
     </header>
     
+    <!-- TradingView Ticker Tape - iOS 26 Glass Style -->
+<div class="tradingview-ticker-container">
+  <div class="tradingview-widget-container">
+    <div class="tradingview-widget-container__widget"></div>
+    <div class="tradingview-widget-copyright">
+      <a href="https://www.tradingview.com/markets/" rel="noopener nofollow" target="_blank">
+        <span class="blue-text">Ticker tape</span>
+      </a>
+      <span class="trademark"> by TradingView</span>
+    </div>
+  </div>
+</div>
     
 
     <!-- popup -->
