--- a/Cboe/public_html/index.html
+++ b/Cboe/public_html/index.html
@@ -373,6 +373,19 @@
             </div>
         </div>
     </section>
+    
+    <!-- TradingView Forex Cross Rates - iOS 26 Glass Style -->
+<div class="tradingview-forex-container">
+  <div class="tradingview-widget-container">
+    <div class="tradingview-widget-container__widget"></div>
+    <div class="tradingview-widget-copyright">
+      <a href="https://www.tradingview.com/markets/currencies/" rel="noopener nofollow" target="_blank">
+        <span class="blue-text">Forex market</span>
+      </a>
+      <span class="trademark"> by TradingView</span>
+    </div>
+  </div>
+</div>
 
     <!-- account type -->
     <section id="accounttype-form" class="zoom-in">
@@ -739,6 +752,27 @@
   "displayMode": "adaptive",
   "width": "100%",
   "height": "48px"
+}
+</script>
+
+<script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-forex-cross-rates.js" async>
+{
+  "colorTheme": "dark",
+  "isTransparent": true,
+  "locale": "en",
+  "currencies": [
+    "EUR",
+    "USD",
+    "JPY",
+    "GBP",
+    "CHF",
+    "AUD",
+    "CAD",
+    "NZD",
+    "CNY"
+  ],
+  "width": "100%",
+  "height": "100%"
 }
 </script>
 
