--- a/Cboe/public_html/index.html
+++ b/Cboe/public_html/index.html
@@ -715,37 +715,14 @@
         });
     </script>
     
-    <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
 {
   "symbols": [
-    {
-      "proName": "FOREXCOM:SPXUSD",
-      "title": "S&P 500"
-    },
-    {
-      "proName": "FOREXCOM:NSXUSD",
-      "title": "Nasdaq 100"
-    },
-    {
-      "proName": "FX_IDC:EURUSD",
-      "title": "EUR/USD"
-    },
-    {
-      "proName": "BITSTAMP:BTCUSD",
-      "title": "Bitcoin"
-    },
-    {
-      "proName": "BITSTAMP:ETHUSD",
-      "title": "Ethereum"
-    },
-    {
-      "proName": "OANDA:USDJPY",
-      "title": "USD/JPY"
-    },
-    {
-      "proName": "OANDA:GBPUSD",
-      "title": "GBP/USD"
-    }
+    {"proName": "FOREXCOM:SPXUSD", "title": "S&P 500"},
+    {"proName": "FOREXCOM:NSXUSD", "title": "Nasdaq 100"},
+    {"proName": "FX_IDC:EURUSD", "title": "EUR/USD"},
+    {"proName": "BITSTAMP:BTCUSD", "title": "Bitcoin"},
+    {"proName": "BITSTAMP:ETHUSD", "title": "Ethereum"}
   ],
   "colorTheme": "dark",
   "locale": "en",
@@ -753,7 +730,7 @@
   "showSymbolLogo": true,
   "displayMode": "adaptive",
   "width": "100%",
-  "height": "48px"
+  "height": "48"
 }
 </script>
 
