--- a/Cboe/public_html/index.html
+++ b/Cboe/public_html/index.html
@@ -715,7 +715,8 @@
         });
     </script>
     
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+  <!-- TradingView Ticker Tape -->
+<script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
 {
   "symbols": [
     {"proName": "FOREXCOM:SPXUSD", "title": "S&P 500"},
@@ -731,6 +732,18 @@
   "displayMode": "adaptive",
   "width": "100%",
   "height": "48"
+}
+</script>
+
+<!-- TradingView Forex Cross Rates -->
+<script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-forex-cross-rates.js" async>
+{
+  "colorTheme": "dark",
+  "isTransparent": true,
+  "locale": "en",
+  "currencies": ["EUR","USD","JPY","GBP","CHF","AUD","CAD","NZD","CNY"],
+  "width": "100%",
+  "height": "100%"
 }
 </script>
 
