--- a/Cboe/public_html/index.html
+++ b/Cboe/public_html/index.html
@@ -137,9 +137,13 @@
     "largeChartUrl": "",
     "isTransparent": true,
     "showSymbolLogo": true,
-    "displayMode": "adaptive"
+    "displayMode": "adaptive",
+    "height": 60   /* ✅ Added height here */
   }
   </script>
+</div>
+<!-- TradingView Widget END -->
+
 </div>
 <!-- TradingView Widget END -->
 
@@ -775,37 +779,8 @@
         });
     </script>
     
-  <!-- TradingView Ticker Tape -->
-<script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
-{
-  "symbols": [
-    {"proName": "FOREXCOM:SPXUSD", "title": "S&P 500"},
-    {"proName": "FOREXCOM:NSXUSD", "title": "Nasdaq 100"},
-    {"proName": "FX_IDC:EURUSD", "title": "EUR/USD"},
-    {"proName": "BITSTAMP:BTCUSD", "title": "Bitcoin"},
-    {"proName": "BITSTAMP:ETHUSD", "title": "Ethereum"}
-  ],
-  "colorTheme": "dark",
-  "locale": "en",
-  "isTransparent": true,
-  "showSymbolLogo": true,
-  "displayMode": "adaptive",
-  "width": "100%",
-  "height": "48"
-}
-</script>
 
-<!-- TradingView Forex Cross Rates -->
-<script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-forex-cross-rates.js" async>
-{
-  "colorTheme": "dark",
-  "isTransparent": true,
-  "locale": "en",
-  "currencies": ["EUR","USD","JPY","GBP","CHF","AUD","CAD","NZD","CNY"],
-  "width": "100%",
-  "height": "100%"
-}
-</script>
+
 
 
     <script src="./assets/js/main.js"></script>
