--- a/Cboe/public_html/admin/manage-users.html
+++ b/Cboe/public_html/admin/manage-users.html
@@ -76,21 +76,20 @@
 
                 <section>
                     <h2>Users</h2>
-                    <table id="users-table">
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Name</th>
-                                <th>Email</th>
-                                <th>Balance ($)</th>
-                                <th>Update Balance</th>
-                                <th>Send Message/ Billing</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Users will be populated here -->
-                        </tbody>
-                    </table>
+                  <table id="users-table">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Name</th>
+                                <th>Email</th>
+                                <th>Balance ($)</th>
+                                <th>Update Balance</th>
+                                <th>Message/Billing</th>
+                                <th>Status</th>                                  <th>Actions</th>                             </tr>
+                        </thead>
+                        <tbody>
+                                                    </tbody>
+                    </table>
 
                     <!-- <div id="message-container"></div> -->
                 </section>
