--- a/Cboe/public_html/admin/transaction.html
+++ b/Cboe/public_html/admin/transaction.html
@@ -26,6 +26,8 @@
                     <li><a href="manage-users.html"><i class="fa-solid fa-chart-line"></i><span>Manage Users</span></a>
                     </li>
                     <li><a href="#" class="active"><i class="fa-solid fa-wallet"></i><span>Transaction</span></a></li>
+                    
+                     <li><a href="#" id="navWalletUpdate"><i class="fa-solid fa-wallet"></i><span>Update Wallet Address</span></a></li>
                 </ul>
             </nav>
             <!-- theme toggle and register button -->
