--- a/Cboe/public_html/admin/admin.html
+++ b/Cboe/public_html/admin/admin.html
@@ -22,7 +22,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
     
-    <script src="./assets/js/firebase-config.js"></script> 
+    <script src="../firebase-config.js"></script> 
     
     <script src="./assets/js/admin.js"></script>
 </body>
