--- a/Cboe/public_html/admin/dashboard.html
+++ b/Cboe/public_html/admin/dashboard.html
@@ -165,7 +165,9 @@
     </div>
 
     <div id="mobile-overlay" class="mobile-overlay hidden"></div>
-    <script type="module" src="./assets/js/dashboard.js"></script> 
-</body>
+ <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js" type="module"></script>
 
+<script type="module" src="../assets/js/dashboard.js"></script>
+
+</body>
 </html>
