--- a/Cboe/public_html/admin/transaction.html
+++ b/Cboe/public_html/admin/transaction.html
@@ -186,7 +186,9 @@
         </div>
     </div>
     <div id="mobile-overlay" class="mobile-overlay hidden"></div>
-    <script type="module" src="./assets/js/transaction.js"></script>
-</body>
+<script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js" type="module"></script>
 
+<script type="module" src="../assets/js/dashboard.js"></script>
+
+</body>
 </html>
