--- a/Cboe/public_html/register/register.html
+++ b/Cboe/public_html/register/register.html
@@ -170,6 +170,8 @@
             </div>
         </div>
     </div>
+    <script type="module" src="./firebase-config.js"></script> 
+    
     <script type="module" src="../assets/js/register.js"></script>
 </body>
 
