--- a/Cboe/public_html/login/login.html
+++ b/Cboe/public_html/login/login.html
@@ -78,6 +78,9 @@
             </div>
         </div>
     </div>
+    
+    <script type="module" src="./firebase-config.js"></script> 
+
     <script type="module" src="../assets/js/login.js"></script>
 </body>
 </html>
