--- a/Cboe/public_html/dashboard/dashboard.html
+++ b/Cboe/public_html/dashboard/dashboard.html
@@ -265,6 +265,8 @@
     <div id="mobile-overlay" class="mobile-overlay hidden"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="module" src="./firebase-config.js"></script> 
+
     <script type="module" src="../assets/js/dashboard.js"></script>
 </body>
 
