--- a/Cboe/public_html/dashboard/deposit.html
+++ b/Cboe/public_html/dashboard/deposit.html
@@ -169,6 +169,8 @@
     </div>
 
     <div id="mobile-overlay" class="mobile-overlay hidden"></div>
+    
+       <script type="module" src="./firebase-config.js"></script> 
 
     <script type="module" src="../assets/js/deposit.js"></script>
 </body>
