--- a/Cboe/public_html/admin/manage-users.html
+++ b/Cboe/public_html/admin/manage-users.html
@@ -193,6 +193,8 @@
     <div id="mobile-overlay" class="mobile-overlay hidden"></div>
 <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js" type="module"></script>
 
+   <script type="module" src="../firebase-config.js"></script> 
+
 <script type="module" src="../assets/js/dashboard.js"></script>
 
 </body>
