--- a/Cboe/public_html/index.html
+++ b/Cboe/public_html/index.html
@@ -407,7 +407,7 @@
      rel="noopener nofollow" target="_blank">
     <span class="blue-text">Forex market</span>
   </a>
-  <span class="trademark"> by TradingView</span>
+  <span class="trademark"></span>
   <script type="text/javascript" 
           src="https://s3.tradingview.com/external-embedding/embed-widget-forex-cross-rates.js" 
           async>
@@ -427,7 +427,7 @@
       "CNY"
     ],
     "backgroundColor": "#0F0F0F",
-    "width": "100%",         /* ✅ responsive */
+    "width": "auto",         /* ✅ responsive */
     "height": 400
   }
   </script>
