--- a/Cboe/public_html/index.html
+++ b/Cboe/public_html/index.html
@@ -427,7 +427,7 @@
       "CNY"
     ],
     "backgroundColor": "#0F0F0F",
-    "width": "auto",         /* ✅ responsive */
+    "width": "300",         /* ✅ responsive */
     "height": 400
   }
   </script>
