--- a/Cboe/public_html/index.html
+++ b/Cboe/public_html/index.html
@@ -413,35 +413,19 @@
           async>
   {
     "colorTheme": "dark",
-    "isTransparent": true,   /* ✅ transparent */
+    "isTransparent": true,
     "locale": "en",
     "currencies": [
-      "EUR",
-      "USD",
-      "JPY",
-      "GBP",
-      "CHF",
-      "AUD",
-      "CAD",
-      "NZD",
-      "CNY"
+      "EUR","USD","JPY","GBP","CHF","AUD","CAD","NZD","CNY"
     ],
     "backgroundColor": "#0F0F0F",
-    "width": "300",         /* ✅ responsive */
+    "width": "100%",   /* ✅ auto-resizes on mobile */
     "height": 400
   }
   </script>
 </div>
 <!-- TradingView Widget END -->
 
-<style>
-/* Hide on desktop (≥769px) */
-@media (min-width: 769px) {
-  .mobile-only {
-    display: none !important;
-  }
-}
-</style>
     <!-- account type -->
     <section id="accounttype-form" class="zoom-in">
         <!-- Description -->
