--- a/Cboe/public_html/login/login.html
+++ b/Cboe/public_html/login/login.html
@@ -79,7 +79,7 @@
         </div>
     </div>
     
-    <script type="module" src="./firebase-config.js"></script> 
+   <!-- <script type="module" src="./firebase-config.js"></script> -->
 
     <script type="module" src="../assets/js/login.js"></script>
 </body>
