--- a/Cboe/public_html/dashboard/dashboard.html
+++ b/Cboe/public_html/dashboard/dashboard.html
@@ -247,7 +247,7 @@
 
     <div id="mobile-overlay" class="mobile-overlay hidden"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <!--  <script type="module" src="./firebase-config.js"></script> -->
 
     <script type="module" src="../assets/js/dashboard.js"></script>
