--- a/Cboe/public_html/admin/admin.html
+++ b/Cboe/public_html/admin/admin.html
@@ -13,7 +13,7 @@
       <input type="email" id="adminEmail" placeholder="Admin Email" required />
       <input type="password" id="adminPassword" placeholder="Password" required />
       <button type="submit">Login</button>
-      <p id="adminLoginError" class="error-msg"></p>
+      <div id="adminLoginError" class="error-msg"></div>
     </form>
   </div>
 
