--- a/Cboe/public_html/admin/manage-users.html
+++ b/Cboe/public_html/admin/manage-users.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin | Manage Users</title>
 
-  <link rel="stylesheet" href="./assets/css/dashboard.css" />
+  <link rel="stylesheet" href="./assets/css/admin-dashboard.css" />
 
   <!-- ✅ Font Awesome fixed to a valid version -->
   <link
@@ -52,11 +52,11 @@
         } else {
           console.warn("Not an admin → redirecting.");
           await signOut(window.auth);
-          window.location.href = "../admin.html";
+          window.location.href = "admin-login.html";
         }
       } else {
         console.log("No user signed in → redirecting.");
-        window.location.href = "../admin.html";
+        window.location.href = "admin-login.html";
       }
     });
   </script>
@@ -80,7 +80,7 @@
       <nav id="sidebar-menu">
         <ul>
           <li>
-            <a href="dashboard.html"><i class="fas fa-home"></i><span>Dashboard</span></a>
+            <a href="admin-dashboard.html"><i class="fas fa-home"></i><span>Dashboard</span></a>
           </li>
           <li>
             <a href="manage-users.html" class="active"><i class="fa-solid fa-user-gear"></i><span>Manage Users</span></a>
@@ -211,6 +211,6 @@
 
   <!-- ✅ Load scripts in correct order -->
   <script type="module" src="../firebase-config.js"></script>
-  <script type="module" src="../assets/js/dashboard.js"></script>
+  <script type="module" src="./assets/js/admin-dashboard.js"></script>
 </body>
 </html>
