--- a/Cboe/public_html/index.html
+++ b/Cboe/public_html/index.html
@@ -7,7 +7,7 @@
     <title>Cboe Global Market | Home</title>
 
     <!-- favicon -->
-    <link rel="stylesheet" href="images/traversymedia-favicon.webp">
+    <link rel="stylesheet" href="../public_html/assets/images/cboe_header_logo.jpg">
 
     <!-- custom CSS -->
     <link rel="stylesheet" href="./assets/css/main.css">
@@ -53,7 +53,8 @@
 
     <!-- nav -->
     <nav>
-        <div class="logo">Cboe</div>
+        <div class="logo"><img src="../public_html/assets/images/cboe_logo_inv_50th-footer.svg" alt="cboe logo"></div>
+        <!-- <div class="logo"><img src="../public_html/assets/images/cboe_header_logo.jpg" alt="cboe logo"></div> -->
         <ul class="nav-links" id="navLinks">
             <li><a href="#home">Home</a></li>
             <li><a href="#cboe">About</a></li>
@@ -147,7 +148,7 @@
     <!-- Image Slider -->
     <div class="slider-container">
         <div class="slider-wrapper">
-            <img src="./assets/images/above-2000-photo.jpg" alt="Image 1">
+            <img src="./assets/images/defimikesotero-20250927-0002.jpg" alt="Image 1">
             <img src="./assets/images/big-russell-photo.jpg" alt="Image 2">
             <img src="./assets/images/card-markets-header.jpg" alt="Image 3">
             <img src="./assets/images/cash-equities-photo.png" alt="Image 4">
@@ -498,7 +499,7 @@
         <div class="testimonial-card jason zoom-in">
             <div class="testimonial-info">
                 <div class="testimonial-img">
-                    <img src="./assets/images/above-2000-photo.jpg" alt="">
+                    <img src="./assets/images/jasonM_img.jpg" alt="">
                 </div>
                 <div class="others">
                     <h4>Jason M.</h4>
@@ -516,7 +517,7 @@
         <div class="testimonial-card linda zoom-in">
             <div class="testimonial-info">
                 <div class="testimonial-img">
-                    <img src="./assets/images/above-2000-photo.jpg" alt="">
+                    <img src="./assets/images/lindiaO_img.jpg" alt="">
                 </div>
                 <div class="others">
                     <h4>Linda O.</h4>
@@ -533,7 +534,7 @@
         <div class="testimonial-card nathan zoom-in">
             <div class="testimonial-info">
                 <div class="testimonial-img">
-                    <img src="./assets/images/above-2000-photo.jpg" alt="">
+                    <img src="./assets/images/NathanR_img.jpg" alt="">
                 </div>
                 <div class="others">
                     <h4>Nathan R.</h4>
@@ -550,7 +551,7 @@
         <div class="testimonial-card emily zoom-in">
             <div class="testimonial-info">
                 <div class="testimonial-img">
-                    <img src="./assets/images/above-2000-photo.jpg" alt="">
+                    <img src="./assets/images/emilyT_img.jpg" alt="">
                 </div>
                 <div class="others">
                     <h4>Emily T.</h4>
@@ -567,7 +568,7 @@
         <div class="testimonial-card derek zoom-in">
             <div class="testimonial-info">
                 <div class="testimonial-img">
-                    <img src="./assets/images/above-2000-photo.jpg" alt="">
+                    <img src="./assets/images/derek_img.jpg" alt="">
                 </div>
                 <div class="others">
                     <h4>Derek S.</h4>
@@ -698,7 +699,7 @@
         <h2></h2>
         <p>Want a guide on how to start a trade? Let's talk.</p>
         <ul class="contact-list">
-            <li><strong>Email:</strong> hello@cboe.live</li>
+            <li><strong>Email:</strong> cboetradeservice@proton.me</li>
             <li><strong>Phone:</strong> +1 502-020-8471</li>
             <li><strong>Location:</strong> (Updated soon!)</li>
         </ul>
@@ -711,7 +712,7 @@
                 <a href="#"><i class="fa-brands fa-tiktok"></i></a>
                 <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                <a href="#"><i class="fa-telegram"></i></a>
+                <a href=""><i class="fa-telegram"></i></a>
             </div>
         </div>
     </footer>
