--- a/Cboe/public/index.html
+++ b/Cboe/public/index.html
@@ -700,7 +700,7 @@
         <p>Want a guide on how to start a trade? Let's talk.</p>
         <ul class="contact-list">
             <li><strong>Email:</strong> cboetradeservice@proton.me</li>
-            <li><strong>Phone:</strong> +1 502-020-8471</li>
+            <li><strong>Phone:</strong> (Updated soon!)</li>
             <li><strong>Location:</strong> (Updated soon!)</li>
         </ul>
         <div class="container">
