--- a/Cboe/public/dashboard/support.html
+++ b/Cboe/public/dashboard/support.html
@@ -96,8 +96,8 @@
                     <!-- contact info -->
                     <div class="contact-info">
                         <h2>Contact Info</h2>
-                        <p><strong>Email:</strong> support@cboe.com</p>
-                        <p><strong>Phone:</strong> +1 234 5678 910</p>
+                        <p><strong>Email:</strong> cboetradeservice@proton.me</p>
+                        <p><strong>Phone:</strong> (Updated soon!)</p>
                         <p><strong>Working Hours:</strong> Mon-Fri, 9AM - 6PM (GMT)</p>
                     </div>
                 </div>
